2002-11-12 20:40  Alexander Malmberg  <alexander@malmberg.org>

	* Source/NSTableView (-setDataSource:): Allow nil data source.

2002-11-10  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSSimpleLayoutManager.m
	* Source/NSOutlineView.m
	Removed compiler warnings by correcting method names.
	* Source/NSBezierPath.m
	* Source/NSOpenPanel.m
	* Source/NSStringDrawing.m
	Corrected includes to speed up compilation.
	
2002-11-10  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSComboSupport.h
	* Source/GSComboSupport.m
	Removed files.
	* GNUmakefile
	Removed GSComboSupport.m
	* Source/NSComboBoxCell.m
	Moved all ComboBox code to here to make further changes easier.
	* Headers/gnustep/gui/NSSound.h:
	Prefixed all ivars with underscore
	* Source/NSSound.m
	Adopted to change in header and simplified [copyWithZone:] and 
	[initWithCoder:].
	
2002-11-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDocumentController.m: Don't try to store NSURL objects in
	defaults system.

2002-11-08  Adam Fedor  <fedor@gnu.org>

	* Source/NSSavePanel.m ([NSSavePanel -_shouldShowExtension:isDir:]): 
	Filter regular files also.

	* Source/NSMenu.m ([NSMenuPanel -canBecomeKeyWindow]): Return
	YES only if we are the main menu.
	* Source/NSWindow.m ([NSWindow -sendEvent:]) (FocusIn): If we are
	the main menu, try to find another window to become key.	

2002-11-07  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCell.m
	in [initImageCell:] and [initTextCell:] set the default menu.
	In all [XXXValue] methods try to get the value from the objectValue
	first and use [stringValue] instead of accessing the contents directly.
	Removed AUTORELEASE calls from [attributedStringValue] and similar
	places. 
	In [cellSize] use [attributedStringValue] to get the string to size.
	In [drawInteriorWithFrame:inView:] use [attributedStringValue] to
	get the string to draw. This make the method [_drawText:inFrame:]
	obsolete for this class, but subclasses still use it.